--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ logging.level.org.hibernate=ERROR
 #enabling the H2 console
 server.port=9000
 spring.h2.console.enabled=true
+
+spring.mvc.format.date=dd-MM-yyyy
