--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ server.port=9000
 spring.h2.console.enabled=true
 
 spring.mvc.format.date=dd-MM-yyyy
+spring.h2.console.settings.web-allow-others=true
