--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-#spring.datasource.url=jdbc:h2:mem:mydb
-spring.datasource.url=jdbc:h2:file:./data/demo
+spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:file:./data/demo
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 #enabling the H2 console
